[package]
name = "libc-print"
version = "0.1.21"
authors = ["Matt Mastracci <matthew@mastracci.com>"]
edition = "2018"
description = "println! and eprintln! macros on libc without stdlib"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/mmastrac/rust-libc-print"
readme = "README.md"

[lib]
name = "libc_print"

[dependencies]
libc = { version = "0.2.139", default-features = false }
